--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@types/quaternion": "^1.3.3",
     "gsap": "^3.12.5",
     "hex-color-opacity": "^0.4.2",
     "normalize.css": "^8.0.1",
     "nuxt": "^3.11.2",
     "pathe": "^1.1.2",
+    "quaternion": "^1.5.1",
     "the-new-css-reset": "^1.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue3-pixi": "^0.9.1",
     "vue3-pixi-nuxt": "^0.9.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/device": "^3.1.1"
   }
 }
