Fix accelerometer, improve resolution

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ logs
 /assets/Lamp - 2020/
 /assets/Nazar - 2021/
 /assets/OUROBOROS - 2022/
+
+192.168.1.1.pem
+192.168.1.148-key.pem
+/192.168.1.148.pem
+/192.168.1.148-key.pem
